--- a/conda.yaml
+++ b/conda.yaml
@@ -1,8 +1,8 @@
-name: halliciguard
+name: halluciguard
 channels:
   - defaults
 dependencies:
   - python=3.13.5
   - pip:
       - requests
-prefix: /opt/anaconda3/envs/halliciguard_env
+prefix: /opt/anaconda3/envs/halluciguard_env
