--- a/conda.yaml
+++ b/conda.yaml
@@ -5,4 +5,6 @@ dependencies:
   - python=3.13.5
   - pip:
       - requests
+      - pydantic
+      - natsort
 prefix: /opt/anaconda3/envs/halluciguard_env
